# LucyMind

./: .gitignore  .worktree.toml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml
crates/app/assets/: LucyMind.icns
crates/app/src/: assets.rs  lib.rs  logging.rs  main.rs  path_env.rs  terminal_grid.rs  terminal_view.rs  theme.rs  workspace.rs
crates/app/src/ui/: button.rs  dialog.rs  mod.rs  path_picker.rs
crates/app/src/workspace/: dialogs.rs  mod.rs  settings.rs  sidebar.rs  status_bar.rs  tabs.rs
crates/app/tests/: agent_menu.rs  button_keyboard.rs  close.rs  debug_log.rs  error_logging.rs  github_pr.rs  input_theme.rs  multi_tab.rs  new_worktree.rs  path_picker_windows.rs  quick_launcher.rs  smoke.rs  startup.rs  terminal_input.rs  terminal_render.rs  worktree_list.rs  wsl_host_test.rs  wsl_integration_test.rs
crates/app/tests/common/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: github.rs  host.rs  lib.rs
crates/core/src/agent/: mod.rs
crates/core/src/config/: mod.rs  schema.rs
crates/core/src/git/: mod.rs  status.rs  worktree.rs
crates/core/src/hooks/: engine.rs  events.rs  mod.rs
crates/core/src/session/: mod.rs
crates/core/tests/: config_test.rs  git_test.rs  hooks_test.rs  smoke_test.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: input.rs  lib.rs  palette.rs  session.rs
crates/terminal/tests/: session_test.rs
openspec/changes/agent-launcher-menu/: design.md  proposal.md  tasks.md
openspec/changes/agent-launcher-menu/specs/agent-launcher/: spec.md
openspec/changes/github-current-branch-pr/: design.md  proposal.md  tasks.md
openspec/changes/github-current-branch-pr/specs/github-current-branch-pr/: spec.md
openspec/changes/open-icon-and-terminal-tabs/: design.md  proposal.md  tasks.md
openspec/changes/open-icon-and-terminal-tabs/specs/open-repo-icon/: spec.md
openspec/changes/open-icon-and-terminal-tabs/specs/terminal-tabs/: spec.md
openspec/changes/tab-overflow-and-launcher-menu/: design.md  proposal.md  tasks.md
openspec/changes/tab-overflow-and-launcher-menu/specs/launcher-menu/: spec.md
openspec/changes/tab-overflow-and-launcher-menu/specs/tab-overflow/: spec.md
openspec/changes/terminal-copy/: design.md  proposal.md  tasks.md
openspec/changes/terminal-copy/specs/terminal-copy/: spec.md
openspec/changes/terminal-render-fix/: design.md  proposal.md  tasks.md
openspec/changes/terminal-render-fix/specs/terminal-render/: spec.md
openspec/changes/ui-integration-tests/: design.md  proposal.md  tasks.md
openspec/changes/ui-integration-tests/specs/ui-integration-tests/: spec.md
openspec/changes/wsl-remote-host/: design.md  proposal.md  tasks.md
openspec/changes/wsl-remote-host/specs/remote-host/: spec.md
openspec/changes/wsl-remote-host/specs/wsl-host/: spec.md
openspec/changes/zed-style-file-picker/: design.md  proposal.md  tasks.md
openspec/changes/zed-style-file-picker/specs/path-picker/: spec.md
openspec/changes/zed-style-panel/: design.md  proposal.md  tasks.md
openspec/changes/zed-style-panel/specs/file-tree-panel/: spec.md
