[package]
name = "lucy-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lucy"
path = "src/main.rs"

# GPUI 应用层。GPUI(git/pre-1.0 依赖)刻意留到 U8-spike 引入 ——
# 那是全项目最高风险、无先例的部分,单独作为技术验证先打通,
# 不该拖累 U1 脚手架构建。
[dependencies]
lucy-core.workspace = true
lucy-terminal.workspace = true
anyhow.workspace = true
log.workspace = true

# U8-spike 将引入:
# gpui = "0.2"   # 或 { git = "https://github.com/zed-industries/zed", rev = "<pin>" }
