[package]
name = "lucy-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lucy"
path = "src/main.rs"

# GPUI 应用层。GPUI(git/pre-1.0 依赖)刻意留到 U8-spike 引入 ——
# 那是全项目最高风险、无先例的部分,单独作为技术验证先打通,
# 不该拖累 U1 脚手架构建。
[dependencies]
lucy-core.workspace = true
lucy-terminal.workspace = true
anyhow.workspace = true
log.workspace = true

# U8-spike:GPUI(pre-1.0)。先用 crates.io 版 pin 到 0.2.2 求可复现;
# 若 API 缺失再改 git 依赖 zed 仓库。
gpui = "0.2.2"
env_logger = "0.11"
